--- a/front/package.json
+++ b/front/package.json
@@ -49,7 +49,9 @@
         "vue-scrollto": "^2.20.0",
         "vue-tabler-icons": "2.9.0",
         "vue3-apexcharts": "1.4.1",
+        "vue3-easy-data-table": "^1.5.47",
         "vue3-perfect-scrollbar": "^1.6.1",
+        "vue3-table-lite": "^1.3.9",
         "vuelidate": "^0.7.7",
         "vuetify": "3.3.19",
         "yup": "^0.32.11"
